# rust-synapse-compress-state

./: Cargo.toml
src/: compressor.rs  database.rs  errors.rs  lib.rs  main.rs
synapse_auto_compressor/: Cargo.toml
synapse_auto_compressor/src/: main.rs  manager.rs  state_saving.rs
