[package]
name = "synapse_auto_compressor"
authors = ["William Ashton"]
version = "0.1.2"
edition = "2018"

[dependencies]
clap = "2.33.0"
openssl = "0.10.32"
postgres = "0.19.0"
postgres-openssl = "0.5.0"
rand = "0.8.0"
serial_test = "0.5.1"
synapse_compress_state = { path = "../", features = ["no-progress-bars"] }
tracing = "0.1"
tracing-subscriber = "0.3"
color-eyre = "0.6.1"

[dependencies.tikv-jemallocator]
version = "0.4.1"
optional = true

[features]
default = ["jemalloc"]
jemalloc = ["tikv-jemallocator"]